# LearningOfOT

./: CMakeLists.txt  cmake_install.cmake
emp-ot/: client.h
src/: main.cpp
